keycloak/templates/svc_keycloak_custom.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak-custom
  namespace: rhsso
spec:
  ports:
  - name: keycloak-custom-https
    port: 8843
    protocol: TCP
    targetPort: 8843
  selector:
    app: keycloak
    component: keycloak
  sessionAffinity: None
  type: ClusterIP
