keycloak/templates/route_keycloak-custom.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: keycloak
  name: keycloak-custom
  namespace: rhsso
spec:
  host: keycloak-custom-rhsso.apps.v2c6zabo.westeurope.aroapp.io
  port:
    targetPort: keycloak-custom-https
  tls:
    termination: passthrough
  to:
    kind: Service
    name: keycloak-custom
    weight: 100
  wildcardPolicy: None
